ymir_viz: dataset_fast_evaluate: add need_pr_curve
